bug fixes after refactor, larger logo on mobile, version refreshing

--- a/static/styles/teaorbit.css
+++ b/static/styles/teaorbit.css
@@ -13,7 +13,10 @@ a:hover { border-bottom: 1px solid #666; }
 
 #header { position: absolute; top: 0; left: 0; width: 100%; background: #000; z-index: 100; font-size: 14px; font-weight: normal; }
 #header h1 { margin: 0 0 0 20px; padding: 0 30px 0 0; line-height: 50px; font-size: 25px; }
-#header h1 a { background: url(../assets/tea-white.png) center left no-repeat; background-size: 30px 30px; padding-left: 45px; }
+#header h1 a:hover { border: none; }
+#header h1 a:hover img { background: #555; }
+#header h1 a img { width: 40px; height: 40px; background: #333; border-radius: 50%; display: block; float: left; border: 5px solid #000; margin: 0 0 0 -10px; }
+#header h1 a span { margin-left: 10px; }
 
 #header .button, #header .info { float: right; line-height: 50px; padding: 0 20px 0 20px; margin-left: 1px; }
 #header .button { background: #444; }
@@ -84,7 +87,10 @@ and (min-device-width : 320px)
 and (max-device-width : 568px) { 
     #header { height: 30px; padding: 0; }
     #header h1 { margin: 0; padding: 0 30px; line-height: 30px; font-size: 12px; padding: 0 15px; }
-    #header h1 a { display: inline-block; width: 0px; height: 30px; overflow:hidden; }
+    #header h1 a span { display: inline-block; width: 0px; height: 30px; overflow:hidden; }
+
+    #header h1 a img { width: 30px; height: 30px; background: #333; border-radius: 50%; display: block; float: left; border: 5px solid #000; margin: 0 0 -20px -10px; }
+
     #audio { line-height: 30px; }
     #show-map { display: inline-block; max-width: 120px; overflow: hidden; text-overflow:ellipsis; }
     #show-map img.map { margin-right: -10px; margin-left: 10px; }
@@ -102,7 +108,6 @@ and (max-device-width : 568px) {
 
     #chat .date { display: none; color: #444; font-size: 12px; margin-left: 5px; }
     #chat .inner { padding: 15px; }
-
 }
 
 img.disabled-desaturate {
